--- a/style.css
+++ b/style.css
@@ -40,8 +40,6 @@
 		}
 		
 		.note{
-			color: var(--notecolor);
-			background-color: var(--notebgcolor);
 			padding:8px;
 			border-radius: 50%;
 			display:inline-block;
@@ -50,6 +48,16 @@
 			height:10px;
 			line-height:10px;
 			margin:8px;
+		}
+		
+		.note1{
+			color: #d3c8c3;
+			background-color: #db9c42;
+		}
+		
+		.note2{
+			color: #d3b690;
+			background-color: #757541;
 		}
 		
 		a:link {
