--- a/style.css
+++ b/style.css
@@ -61,6 +61,11 @@
 			background-color: #757541;
 		}
 		
+		.note3{
+			color: #595941;
+			background-color: #86aeaf;
+		}
+		
 		.datas{
 			color:#e3e3e3;
 			background-color:#d3c8c3;
