--- a/style.css
+++ b/style.css
@@ -25,6 +25,12 @@
 			font-size:30px;
 			font-weight:300;
 		}
+		
+		s{
+			text-decoration-style: double;
+			color:#d3c8c3;
+			user-select: none;
+		}
 
 		.song{
 			font-size:16px;
@@ -33,14 +39,14 @@
 		
 		.english{
 			font-style:italic;
-			//color:#757541 !important;
+			color:#595941 !important;
 		}
 		
 		rt {
 			color: #595941;
 			user-select: none;
 		}
-		
+
 		.note{
 			padding:8px;
 			border-radius: 50%;
@@ -48,8 +54,12 @@
 			text-align: center;
 			width:10px;
 			height:10px;
-			line-height:10px;
+			line-height:8px;
 			margin:8px;
+		}
+		
+		.musicnote{
+			text-indent:-3px
 		}
 		
 		.note1{
@@ -65,6 +75,11 @@
 		.note3{
 			color: #595941;
 			background-color: #86aeaf;
+		}
+		
+		.note4{
+			color: #db9c42;
+			background-color: #d3c8c3;
 		}
 		
 		.datas{
