--- a/style.css
+++ b/style.css
@@ -13,6 +13,12 @@
 			width:50%;
 		}
 		
+		.stuck{
+			position:sticky;
+			margin:0;
+			padding:0;
+		}
+		
 		.verse{
 			padding-top:30px;
 			padding-bottom:30px;
@@ -35,6 +41,11 @@
 		.song{
 			font-size:16px;
 			font-weight:900;
+			margin-top:40px;
+		}
+		
+		.song .track{
+			margin-bottom:2px;
 		}
 		
 		.english{
@@ -55,7 +66,7 @@
 			width:10px;
 			height:10px;
 			line-height:8px;
-			margin:8px;
+			margin-right:8px;
 		}
 		
 		.musicnote{
@@ -82,6 +93,11 @@
 			background-color: #d3c8c3;
 		}
 		
+		.note5{
+			color: #d3b690;
+			background-color: #6e7384;
+		}
+		
 		.datas{
 			color:#e3e3e3;
 			background-color:#d3c8c3;
@@ -93,6 +109,7 @@
 			position:relative;
 			height:100%;
 			margin:0;
+			padding:0;
 		}
 		
 		.lower-elementary {
@@ -151,6 +168,8 @@
 		
 		.switch {
 		  position: relative;
+		  vertical-align:text-top;
+		  margin-top:3px;
 		  display: inline-block;
 		  width: 40px;
 		  height: 20px;
