--- a/style.css
+++ b/style.css
@@ -98,6 +98,11 @@
 			background-color: #6e7384;
 		}
 		
+		.note6{
+			color: #757541;
+			background-color: #d4be96;
+		}
+		
 		.datas{
 			color:#e3e3e3;
 			background-color:#d3c8c3;
