--- a/style.css
+++ b/style.css
@@ -41,7 +41,8 @@
 		.song{
 			font-size:16px;
 			font-weight:900;
-			margin-top:40px;
+			margin-top:30px;
+			margin-bottom:30px;
 		}
 		
 		.song .track{
